--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -210,6 +210,11 @@ docs_workspaces_title: Workspaces
 docs_workspaces_description: |
   Link together your projects for easier maintenance.
 
+docs_workspaces: Reusing Yarn search
+docs_workspaces_title: Reusing Yarn search
+docs_workspaces_description: |
+  How to make your own projects using the search data used for Yarn.
+
 yarn_organization_title: Yarn Organization
 yarn_organization_description: |
   The Yarn organization is a collaboration of many companies and
